Porting changes over from mta-work-manager
